--- a/src/components/layouts/Body/Body.module.scss
+++ b/src/components/layouts/Body/Body.module.scss
@@ -2,4 +2,16 @@
   display: grid;
   grid-template-rows: 80px 1fr;
   grid-template-columns: 300px 1fr;
+
+  > header {
+    grid-area: 1 / 2 / 2 / 3;
+  }
+
+  > aside {
+    grid-area: 1 / 1 / 3 / 2;
+  }
+
+  > main {
+    grid-area: 2 / 2 / 3 / 3;
+  }
 }
