refactor: make every properties in `_theme.scss` use `kebab-case`

--- a/src/styles/base/_theme.scss
+++ b/src/styles/base/_theme.scss
@@ -1,7 +1,5 @@
-/* stylelint-disable */
-
 :root {
-  --fgColor-accent: Highlight;
+  --color-fg-accent: Highlight;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -9,56 +7,57 @@
   [data-theme='dark'] {
     /* dark */
     color-scheme: dark;
-    --focus-outlineColor: #1f6feb;
-    --fgColor-default: #f0f6fc;
-    --fgColor-muted: #9198a1;
-    --fgColor-accent: #4493f8;
-    --fgColor-success: #3fb950;
-    --fgColor-attention: #d29922;
-    --fgColor-danger: #f85149;
-    --fgColor-done: #ab7df8;
-    --bgColor-default: #0d1117;
-    --bgColor-muted: #151b23;
-    --bgColor-neutral-muted: #656c7633;
-    --bgColor-attention-muted: #bb800926;
-    --borderColor-default: #3d444d;
-    --borderColor-muted: #3d444db3;
-    --borderColor-neutral-muted: #3d444db3;
-    --borderColor-accent-emphasis: #1f6feb;
-    --borderColor-success-emphasis: #238636;
-    --borderColor-attention-emphasis: #9e6a03;
-    --borderColor-danger-emphasis: #da3633;
-    --borderColor-done-emphasis: #8957e5;
-    --color-prettylights-syntax-comment: #9198a1;
-    --color-prettylights-syntax-constant: #79c0ff;
-    --color-prettylights-syntax-constant-other-reference-link: #a5d6ff;
-    --color-prettylights-syntax-entity: #d2a8ff;
-    --color-prettylights-syntax-storage-modifier-import: #f0f6fc;
-    --color-prettylights-syntax-entity-tag: #7ee787;
-    --color-prettylights-syntax-keyword: #ff7b72;
-    --color-prettylights-syntax-string: #a5d6ff;
-    --color-prettylights-syntax-variable: #ffa657;
-    --color-prettylights-syntax-brackethighlighter-unmatched: #f85149;
-    --color-prettylights-syntax-brackethighlighter-angle: #9198a1;
-    --color-prettylights-syntax-invalid-illegal-text: #f0f6fc;
-    --color-prettylights-syntax-invalid-illegal-bg: #8e1519;
-    --color-prettylights-syntax-carriage-return-text: #f0f6fc;
-    --color-prettylights-syntax-carriage-return-bg: #b62324;
-    --color-prettylights-syntax-string-regexp: #7ee787;
-    --color-prettylights-syntax-markup-list: #f2cc60;
-    --color-prettylights-syntax-markup-heading: #1f6feb;
-    --color-prettylights-syntax-markup-italic: #f0f6fc;
-    --color-prettylights-syntax-markup-bold: #f0f6fc;
-    --color-prettylights-syntax-markup-deleted-text: #ffdcd7;
-    --color-prettylights-syntax-markup-deleted-bg: #67060c;
-    --color-prettylights-syntax-markup-inserted-text: #aff5b4;
-    --color-prettylights-syntax-markup-inserted-bg: #033a16;
-    --color-prettylights-syntax-markup-changed-text: #ffdfb6;
-    --color-prettylights-syntax-markup-changed-bg: #5a1e02;
-    --color-prettylights-syntax-markup-ignored-text: #f0f6fc;
-    --color-prettylights-syntax-markup-ignored-bg: #1158c7;
-    --color-prettylights-syntax-meta-diff-range: #d2a8ff;
-    --color-prettylights-syntax-sublimelinter-gutter-mark: #3d444d;
+
+    --color-focus-outline: #1f6feb;
+    --color-fg-default: #f0f6fc;
+    --color-fg-muted: #9198a1;
+    --color-fg-accent: #4493f8;
+    --color-fg-success: #3fb950;
+    --color-fg-attention: #d29922;
+    --color-fg-danger: #f85149;
+    --color-fg-done: #ab7df8;
+    --color-bg-default: #0d1117;
+    --color-bg-muted: #151b23;
+    --color-bg-neutral-muted: #656c7633;
+    --color-bg-attention-muted: #bb800926;
+    --color-border-default: #3d444d;
+    --color-border-muted: #3d444db3;
+    --color-border-neutral-muted: #3d444db3;
+    --color-border-accent-emphasis: #1f6feb;
+    --color-border-success-emphasis: #238636;
+    --color-border-attention-emphasis: #9e6a03;
+    --color-border-danger-emphasis: #da3633;
+    --color-border-done-emphasis: #8957e5;
+    --color-syntax-comment: #9198a1;
+    --color-syntax-constant: #79c0ff;
+    --color-syntax-constant-other-reference-link: #a5d6ff;
+    --color-syntax-entity: #d2a8ff;
+    --color-syntax-storage-modifier-import: #f0f6fc;
+    --color-syntax-entity-tag: #7ee787;
+    --color-syntax-keyword: #ff7b72;
+    --color-syntax-string: #a5d6ff;
+    --color-syntax-variable: #ffa657;
+    --color-syntax-brackethighlighter-unmatched: #f85149;
+    --color-syntax-brackethighlighter-angle: #9198a1;
+    --color-syntax-invalid-illegal-text: #f0f6fc;
+    --color-syntax-invalid-illegal-bg: #8e1519;
+    --color-syntax-carriage-return-text: #f0f6fc;
+    --color-syntax-carriage-return-bg: #b62324;
+    --color-syntax-string-regexp: #7ee787;
+    --color-syntax-markup-list: #f2cc60;
+    --color-syntax-markup-heading: #1f6feb;
+    --color-syntax-markup-italic: #f0f6fc;
+    --color-syntax-markup-bold: #f0f6fc;
+    --color-syntax-markup-deleted-text: #ffdcd7;
+    --color-syntax-markup-deleted-bg: #67060c;
+    --color-syntax-markup-inserted-text: #aff5b4;
+    --color-syntax-markup-inserted-bg: #033a16;
+    --color-syntax-markup-changed-text: #ffdfb6;
+    --color-syntax-markup-changed-bg: #5a1e02;
+    --color-syntax-markup-ignored-text: #f0f6fc;
+    --color-syntax-markup-ignored-bg: #1158c7;
+    --color-syntax-meta-diff-range: #d2a8ff;
+    --color-syntax-sublimelinter-gutter-mark: #3d444d;
   }
 }
 
@@ -67,55 +66,56 @@
   [data-theme='light'] {
     /* light */
     color-scheme: light;
-    --focus-outlineColor: #0969da;
-    --fgColor-default: #1f2328;
-    --fgColor-muted: #59636e;
-    --fgColor-accent: #0969da;
-    --fgColor-success: #1a7f37;
-    --fgColor-attention: #9a6700;
-    --fgColor-danger: #d1242f;
-    --fgColor-done: #8250df;
-    --bgColor-default: #ffffff;
-    --bgColor-muted: #f6f8fa;
-    --bgColor-neutral-muted: #818b981f;
-    --bgColor-attention-muted: #fff8c5;
-    --borderColor-default: #d1d9e0;
-    --borderColor-muted: #d1d9e0b3;
-    --borderColor-neutral-muted: #d1d9e0b3;
-    --borderColor-accent-emphasis: #0969da;
-    --borderColor-success-emphasis: #1a7f37;
-    --borderColor-attention-emphasis: #9a6700;
-    --borderColor-danger-emphasis: #cf222e;
-    --borderColor-done-emphasis: #8250df;
-    --color-prettylights-syntax-comment: #59636e;
-    --color-prettylights-syntax-constant: #0550ae;
-    --color-prettylights-syntax-constant-other-reference-link: #0a3069;
-    --color-prettylights-syntax-entity: #6639ba;
-    --color-prettylights-syntax-storage-modifier-import: #1f2328;
-    --color-prettylights-syntax-entity-tag: #0550ae;
-    --color-prettylights-syntax-keyword: #cf222e;
-    --color-prettylights-syntax-string: #0a3069;
-    --color-prettylights-syntax-variable: #953800;
-    --color-prettylights-syntax-brackethighlighter-unmatched: #82071e;
-    --color-prettylights-syntax-brackethighlighter-angle: #59636e;
-    --color-prettylights-syntax-invalid-illegal-text: #f6f8fa;
-    --color-prettylights-syntax-invalid-illegal-bg: #82071e;
-    --color-prettylights-syntax-carriage-return-text: #f6f8fa;
-    --color-prettylights-syntax-carriage-return-bg: #cf222e;
-    --color-prettylights-syntax-string-regexp: #116329;
-    --color-prettylights-syntax-markup-list: #3b2300;
-    --color-prettylights-syntax-markup-heading: #0550ae;
-    --color-prettylights-syntax-markup-italic: #1f2328;
-    --color-prettylights-syntax-markup-bold: #1f2328;
-    --color-prettylights-syntax-markup-deleted-text: #82071e;
-    --color-prettylights-syntax-markup-deleted-bg: #ffebe9;
-    --color-prettylights-syntax-markup-inserted-text: #116329;
-    --color-prettylights-syntax-markup-inserted-bg: #dafbe1;
-    --color-prettylights-syntax-markup-changed-text: #953800;
-    --color-prettylights-syntax-markup-changed-bg: #ffd8b5;
-    --color-prettylights-syntax-markup-ignored-text: #d1d9e0;
-    --color-prettylights-syntax-markup-ignored-bg: #0550ae;
-    --color-prettylights-syntax-meta-diff-range: #8250df;
-    --color-prettylights-syntax-sublimelinter-gutter-mark: #818b98;
+
+    --color-focus-outline: #0969da;
+    --color-fg-default: #1f2328;
+    --color-fg-muted: #59636e;
+    --color-fg-accent: #0969da;
+    --color-fg-success: #1a7f37;
+    --color-fg-attention: #9a6700;
+    --color-fg-danger: #d1242f;
+    --color-fg-done: #8250df;
+    --color-bg-default: #fff;
+    --color-bg-muted: #f6f8fa;
+    --color-bg-neutral-muted: #818b981f;
+    --color-bg-attention-muted: #fff8c5;
+    --color-border-default: #d1d9e0;
+    --color-border-muted: #d1d9e0b3;
+    --color-border-neutral-muted: #d1d9e0b3;
+    --color-border-accent-emphasis: #0969da;
+    --color-border-success-emphasis: #1a7f37;
+    --color-border-attention-emphasis: #9a6700;
+    --color-border-danger-emphasis: #cf222e;
+    --color-border-done-emphasis: #8250df;
+    --color-syntax-comment: #59636e;
+    --color-syntax-constant: #0550ae;
+    --color-syntax-constant-other-reference-link: #0a3069;
+    --color-syntax-entity: #6639ba;
+    --color-syntax-storage-modifier-import: #1f2328;
+    --color-syntax-entity-tag: #0550ae;
+    --color-syntax-keyword: #cf222e;
+    --color-syntax-string: #0a3069;
+    --color-syntax-variable: #953800;
+    --color-syntax-brackethighlighter-unmatched: #82071e;
+    --color-syntax-brackethighlighter-angle: #59636e;
+    --color-syntax-invalid-illegal-text: #f6f8fa;
+    --color-syntax-invalid-illegal-bg: #82071e;
+    --color-syntax-carriage-return-text: #f6f8fa;
+    --color-syntax-carriage-return-bg: #cf222e;
+    --color-syntax-string-regexp: #116329;
+    --color-syntax-markup-list: #3b2300;
+    --color-syntax-markup-heading: #0550ae;
+    --color-syntax-markup-italic: #1f2328;
+    --color-syntax-markup-bold: #1f2328;
+    --color-syntax-markup-deleted-text: #82071e;
+    --color-syntax-markup-deleted-bg: #ffebe9;
+    --color-syntax-markup-inserted-text: #116329;
+    --color-syntax-markup-inserted-bg: #dafbe1;
+    --color-syntax-markup-changed-text: #953800;
+    --color-syntax-markup-changed-bg: #ffd8b5;
+    --color-syntax-markup-ignored-text: #d1d9e0;
+    --color-syntax-markup-ignored-bg: #0550ae;
+    --color-syntax-meta-diff-range: #8250df;
+    --color-syntax-sublimelinter-gutter-mark: #818b98;
   }
 }
