--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -19,8 +19,8 @@
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   margin: 0;
-  color: var(--fgColor-default);
-  background-color: var(--bgColor-default);
+  color: var(--color-fg-default);
+  background-color: var(--color-bg-default);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Noto Sans', Helvetica,
     Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji';
   font-size: 16px;
@@ -66,7 +66,7 @@
 
 .markdown-body a {
   background-color: transparent;
-  color: var(--fgColor-accent);
+  color: var(--color-fg-accent);
   text-decoration: none;
 }
 
@@ -90,12 +90,12 @@
   font-weight: var(--base-text-weight-semibold, 600);
   padding-bottom: 0.3em;
   font-size: 2em;
-  border-bottom: 1px solid var(--borderColor-muted);
+  border-bottom: 1px solid var(--color-border-muted);
 }
 
 .markdown-body mark {
-  background-color: var(--bgColor-attention-muted);
-  color: var(--fgColor-default);
+  background-color: var(--color-bg-attention-muted);
+  color: var(--color-fg-default);
 }
 
 .markdown-body small {
@@ -140,11 +140,11 @@
   box-sizing: content-box;
   overflow: hidden;
   background: transparent;
-  border-bottom: 1px solid var(--borderColor-muted);
+  border-bottom: 1px solid var(--color-border-muted);
   height: 0.25em;
   padding: 0;
   margin: var(--base-size-24) 0;
-  background-color: var(--borderColor-default);
+  background-color: var(--color-border-default);
   border: 0;
 }
 
@@ -197,7 +197,7 @@
 }
 
 .markdown-body ::placeholder {
-  color: var(--fgColor-muted);
+  color: var(--color-fg-muted);
   opacity: 1;
 }
 
@@ -234,7 +234,7 @@
 .markdown-body [role='button']:focus,
 .markdown-body input[type='radio']:focus,
 .markdown-body input[type='checkbox']:focus {
-  outline: 2px solid var(--focus-outlineColor);
+  outline: 2px solid var(--color-focus-outline);
   outline-offset: -2px;
   box-shadow: none;
 }
@@ -250,7 +250,7 @@
 .markdown-body [role='button']:focus-visible,
 .markdown-body input[type='radio']:focus-visible,
 .markdown-body input[type='checkbox']:focus-visible {
-  outline: 2px solid var(--focus-outlineColor);
+  outline: 2px solid var(--color-focus-outline);
   outline-offset: -2px;
   box-shadow: none;
 }
@@ -279,13 +279,13 @@
       monospace
     );
   line-height: 10px;
-  color: var(--fgColor-default);
+  color: var(--color-fg-default);
   vertical-align: middle;
-  background-color: var(--bgColor-muted);
-  border: solid 1px var(--borderColor-neutral-muted);
-  border-bottom-color: var(--borderColor-neutral-muted);
+  background-color: var(--color-bg-muted);
+  border: solid 1px var(--color-border-neutral-muted);
+  border-bottom-color: var(--color-border-neutral-muted);
   border-radius: 6px;
-  box-shadow: inset 0 -1px 0 var(--borderColor-neutral-muted);
+  box-shadow: inset 0 -1px 0 var(--color-border-neutral-muted);
 }
 
 .markdown-body h1,
@@ -304,7 +304,7 @@
   font-weight: var(--base-text-weight-semibold, 600);
   padding-bottom: 0.3em;
   font-size: 1.5em;
-  border-bottom: 1px solid var(--borderColor-muted);
+  border-bottom: 1px solid var(--color-border-muted);
 }
 
 .markdown-body h3 {
@@ -325,7 +325,7 @@
 .markdown-body h6 {
   font-weight: var(--base-text-weight-semibold, 600);
   font-size: 0.85em;
-  color: var(--fgColor-muted);
+  color: var(--color-fg-muted);
 }
 
 .markdown-body p {
@@ -336,8 +336,8 @@
 .markdown-body blockquote {
   margin: 0;
   padding: 0 1em;
-  color: var(--fgColor-muted);
-  border-left: 0.25em solid var(--borderColor-default);
+  color: var(--color-fg-muted);
+  border-left: 0.25em solid var(--color-border-default);
 }
 
 .markdown-body ul,
@@ -439,7 +439,7 @@
 }
 
 .markdown-body .absent {
-  color: var(--fgColor-danger);
+  color: var(--color-fg-danger);
 }
 
 .markdown-body .anchor {
@@ -479,7 +479,7 @@
 .markdown-body h4 .octicon-link,
 .markdown-body h5 .octicon-link,
 .markdown-body h6 .octicon-link {
-  color: var(--fgColor-default);
+  color: var(--color-fg-default);
   vertical-align: middle;
   visibility: hidden;
 }
@@ -612,7 +612,7 @@
 .markdown-body table th,
 .markdown-body table td {
   padding: 6px 13px;
-  border: 1px solid var(--borderColor-default);
+  border: 1px solid var(--color-border-default);
 }
 
 .markdown-body table td > :last-child {
@@ -620,12 +620,12 @@
 }
 
 .markdown-body table tr {
-  background-color: var(--bgColor-default);
-  border-top: 1px solid var(--borderColor-muted);
+  background-color: var(--color-bg-default);
+  border-top: 1px solid var(--color-border-muted);
 }
 
 .markdown-body table tr:nth-child(2n) {
-  background-color: var(--bgColor-muted);
+  background-color: var(--color-bg-muted);
 }
 
 .markdown-body table img {
@@ -658,7 +658,7 @@
   padding: 7px;
   margin: 13px 0 0;
   overflow: hidden;
-  border: 1px solid var(--borderColor-default);
+  border: 1px solid var(--color-border-default);
 }
 
 .markdown-body span.frame span img {
@@ -670,7 +670,7 @@
   display: block;
   padding: 5px 0 0;
   clear: both;
-  color: var(--fgColor-default);
+  color: var(--color-fg-default);
 }
 
 .markdown-body span.align-center {
@@ -740,7 +740,7 @@
   margin: 0;
   font-size: 85%;
   white-space: break-spaces;
-  background-color: var(--bgColor-neutral-muted);
+  background-color: var(--color-bg-neutral-muted);
   border-radius: 6px;
 }
 
@@ -785,8 +785,8 @@
   overflow: auto;
   font-size: 85%;
   line-height: 1.45;
-  color: var(--fgColor-default);
-  background-color: var(--bgColor-muted);
+  color: var(--color-fg-default);
+  background-color: var(--color-bg-muted);
   border-radius: 6px;
 }
 
@@ -816,7 +816,7 @@
 .markdown-body .csv-data .blob-num {
   padding: 10px var(--base-size-8) 9px;
   text-align: right;
-  background: var(--bgColor-default);
+  background: var(--color-bg-default);
   border: 0;
 }
 
@@ -826,7 +826,7 @@
 
 .markdown-body .csv-data th {
   font-weight: var(--base-text-weight-semibold, 600);
-  background: var(--bgColor-muted);
+  background: var(--color-bg-muted);
   border-top: 0;
 }
 
@@ -840,8 +840,8 @@
 
 .markdown-body .footnotes {
   font-size: 12px;
-  color: var(--fgColor-muted);
-  border-top: 1px solid var(--borderColor-default);
+  color: var(--color-fg-muted);
+  border-top: 1px solid var(--color-border-default);
 }
 
 .markdown-body .footnotes ol {
@@ -866,12 +866,12 @@
   left: calc(var(--base-size-24) * -1);
   pointer-events: none;
   content: '';
-  border: 2px solid var(--borderColor-accent-emphasis);
+  border: 2px solid var(--color-border-accent-emphasis);
   border-radius: 6px;
 }
 
 .markdown-body .footnotes li:target {
-  color: var(--fgColor-default);
+  color: var(--color-fg-default);
 }
 
 .markdown-body .footnotes .data-footnote-backref g-emoji {
@@ -879,30 +879,30 @@
 }
 
 .markdown-body .pl-c {
-  color: var(--color-prettylights-syntax-comment);
+  color: var(--color-syntax-comment);
 }
 
 .markdown-body .pl-c1,
 .markdown-body .pl-s .pl-v {
-  color: var(--color-prettylights-syntax-constant);
+  color: var(--color-syntax-constant);
 }
 
 .markdown-body .pl-e,
 .markdown-body .pl-en {
-  color: var(--color-prettylights-syntax-entity);
+  color: var(--color-syntax-entity);
 }
 
 .markdown-body .pl-smi,
 .markdown-body .pl-s .pl-s1 {
-  color: var(--color-prettylights-syntax-storage-modifier-import);
+  color: var(--color-syntax-storage-modifier-import);
 }
 
 .markdown-body .pl-ent {
-  color: var(--color-prettylights-syntax-entity-tag);
+  color: var(--color-syntax-entity-tag);
 }
 
 .markdown-body .pl-k {
-  color: var(--color-prettylights-syntax-keyword);
+  color: var(--color-syntax-keyword);
 }
 
 .markdown-body .pl-s,
@@ -912,90 +912,90 @@
 .markdown-body .pl-sr .pl-cce,
 .markdown-body .pl-sr .pl-sre,
 .markdown-body .pl-sr .pl-sra {
-  color: var(--color-prettylights-syntax-string);
+  color: var(--color-syntax-string);
 }
 
 .markdown-body .pl-v,
 .markdown-body .pl-smw {
-  color: var(--color-prettylights-syntax-variable);
+  color: var(--color-syntax-variable);
 }
 
 .markdown-body .pl-bu {
-  color: var(--color-prettylights-syntax-brackethighlighter-unmatched);
+  color: var(--color-syntax-brackethighlighter-unmatched);
 }
 
 .markdown-body .pl-ii {
-  color: var(--color-prettylights-syntax-invalid-illegal-text);
-  background-color: var(--color-prettylights-syntax-invalid-illegal-bg);
+  color: var(--color-syntax-invalid-illegal-text);
+  background-color: var(--color-syntax-invalid-illegal-bg);
 }
 
 .markdown-body .pl-c2 {
-  color: var(--color-prettylights-syntax-carriage-return-text);
-  background-color: var(--color-prettylights-syntax-carriage-return-bg);
+  color: var(--color-syntax-carriage-return-text);
+  background-color: var(--color-syntax-carriage-return-bg);
 }
 
 .markdown-body .pl-sr .pl-cce {
   font-weight: bold;
-  color: var(--color-prettylights-syntax-string-regexp);
+  color: var(--color-syntax-string-regexp);
 }
 
 .markdown-body .pl-ml {
-  color: var(--color-prettylights-syntax-markup-list);
+  color: var(--color-syntax-markup-list);
 }
 
 .markdown-body .pl-mh,
 .markdown-body .pl-mh .pl-en,
 .markdown-body .pl-ms {
   font-weight: bold;
-  color: var(--color-prettylights-syntax-markup-heading);
+  color: var(--color-syntax-markup-heading);
 }
 
 .markdown-body .pl-mi {
   font-style: italic;
-  color: var(--color-prettylights-syntax-markup-italic);
+  color: var(--color-syntax-markup-italic);
 }
 
 .markdown-body .pl-mb {
   font-weight: bold;
-  color: var(--color-prettylights-syntax-markup-bold);
+  color: var(--color-syntax-markup-bold);
 }
 
 .markdown-body .pl-md {
-  color: var(--color-prettylights-syntax-markup-deleted-text);
-  background-color: var(--color-prettylights-syntax-markup-deleted-bg);
+  color: var(--color-syntax-markup-deleted-text);
+  background-color: var(--color-syntax-markup-deleted-bg);
 }
 
 .markdown-body .pl-mi1 {
-  color: var(--color-prettylights-syntax-markup-inserted-text);
-  background-color: var(--color-prettylights-syntax-markup-inserted-bg);
+  color: var(--color-syntax-markup-inserted-text);
+  background-color: var(--color-syntax-markup-inserted-bg);
 }
 
 .markdown-body .pl-mc {
-  color: var(--color-prettylights-syntax-markup-changed-text);
-  background-color: var(--color-prettylights-syntax-markup-changed-bg);
+  color: var(--color-syntax-markup-changed-text);
+  background-color: var(--color-syntax-markup-changed-bg);
 }
 
 .markdown-body .pl-mi2 {
-  color: var(--color-prettylights-syntax-markup-ignored-text);
-  background-color: var(--color-prettylights-syntax-markup-ignored-bg);
+  color: var(--color-syntax-markup-ignored-text);
+  background-color: var(--color-syntax-markup-ignored-bg);
 }
 
 .markdown-body .pl-mdr {
   font-weight: bold;
-  color: var(--color-prettylights-syntax-meta-diff-range);
+  color: var(--color-syntax-meta-diff-range);
 }
 
 .markdown-body .pl-ba {
-  color: var(--color-prettylights-syntax-brackethighlighter-angle);
+  color: var(--color-syntax-brackethighlighter-angle);
 }
 
 .markdown-body .pl-sg {
-  color: var(--color-prettylights-syntax-sublimelinter-gutter-mark);
+  color: var(--color-syntax-sublimelinter-gutter-mark);
 }
 
 .markdown-body .pl-corl {
   text-decoration: underline;
-  color: var(--color-prettylights-syntax-constant-other-reference-link);
+  color: var(--color-syntax-constant-other-reference-link);
 }
 
 .markdown-body [role='button']:focus:not(:focus-visible),
@@ -1078,7 +1078,7 @@
   padding: var(--base-size-8) var(--base-size-16);
   margin-bottom: var(--base-size-16);
   color: inherit;
-  border-left: 0.25em solid var(--borderColor-default);
+  border-left: 0.25em solid var(--color-border-default);
 }
 
 .markdown-body .markdown-alert > :first-child {
@@ -1097,43 +1097,43 @@
 }
 
 .markdown-body .markdown-alert.markdown-alert-note {
-  border-left-color: var(--borderColor-accent-emphasis);
+  border-left-color: var(--color-border-accent-emphasis);
 }
 
 .markdown-body .markdown-alert.markdown-alert-note .markdown-alert-title {
-  color: var(--fgColor-accent);
+  color: var(--color-fg-accent);
 }
 
 .markdown-body .markdown-alert.markdown-alert-important {
-  border-left-color: var(--borderColor-done-emphasis);
+  border-left-color: var(--color-border-done-emphasis);
 }
 
 .markdown-body .markdown-alert.markdown-alert-important .markdown-alert-title {
-  color: var(--fgColor-done);
+  color: var(--color-fg-done);
 }
 
 .markdown-body .markdown-alert.markdown-alert-warning {
-  border-left-color: var(--borderColor-attention-emphasis);
+  border-left-color: var(--color-border-attention-emphasis);
 }
 
 .markdown-body .markdown-alert.markdown-alert-warning .markdown-alert-title {
-  color: var(--fgColor-attention);
+  color: var(--color-fg-attention);
 }
 
 .markdown-body .markdown-alert.markdown-alert-tip {
-  border-left-color: var(--borderColor-success-emphasis);
+  border-left-color: var(--color-border-success-emphasis);
 }
 
 .markdown-body .markdown-alert.markdown-alert-tip .markdown-alert-title {
-  color: var(--fgColor-success);
+  color: var(--color-fg-success);
 }
 
 .markdown-body .markdown-alert.markdown-alert-caution {
-  border-left-color: var(--borderColor-danger-emphasis);
+  border-left-color: var(--color-border-danger-emphasis);
 }
 
 .markdown-body .markdown-alert.markdown-alert-caution .markdown-alert-title {
-  color: var(--fgColor-danger);
+  color: var(--color-fg-danger);
 }
 
 .markdown-body > *:first-child > .heading-element:first-child {
