--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -3,19 +3,6 @@
 @import 'base/theme';
 
 .markdown-body {
-  --base-size-4: 0.25rem;
-  --base-size-8: 0.5rem;
-  --base-size-16: 1rem;
-  --base-size-24: 1.5rem;
-  --base-size-40: 2.5rem;
-  --base-text-weight-normal: 400;
-  --base-text-weight-medium: 500;
-  --base-text-weight-semibold: 600;
-  --fontStack-monospace: ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas,
-    Liberation Mono, monospace;
-}
-
-.markdown-body {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   margin: 0;
@@ -78,7 +65,7 @@
 
 .markdown-body b,
 .markdown-body strong {
-  font-weight: var(--base-text-weight-semibold, 600);
+  font-weight: $text-weight-semibold;
 }
 
 .markdown-body dfn {
@@ -87,7 +74,7 @@
 
 .markdown-body h1 {
   margin: 0.67em 0;
-  font-weight: var(--base-text-weight-semibold, 600);
+  font-weight: $text-weight-semibold;
   padding-bottom: 0.3em;
   font-size: 2em;
   border-bottom: 1px solid var(--color-border-muted);
@@ -133,7 +120,7 @@
 }
 
 .markdown-body figure {
-  margin: 1em var(--base-size-40);
+  margin: 1em $size-40;
 }
 
 .markdown-body hr {
@@ -143,7 +130,7 @@
   border-bottom: 1px solid var(--color-border-muted);
   height: 0.25em;
   padding: 0;
-  margin: var(--base-size-24) 0;
+  margin: $size-24 0;
   background-color: var(--color-border-default);
   border: 0;
 }
@@ -266,18 +253,8 @@
 
 .markdown-body kbd {
   display: inline-block;
-  padding: var(--base-size-4);
-  font: 11px
-    var(
-      --fontStack-monospace,
-      ui-monospace,
-      SFMono-Regular,
-      SF Mono,
-      Menlo,
-      Consolas,
-      Liberation Mono,
-      monospace
-    );
+  padding: $size-4;
+  font: 11px $font;
   line-height: 10px;
   color: var(--color-fg-default);
   vertical-align: middle;
@@ -294,36 +271,36 @@
 .markdown-body h4,
 .markdown-body h5,
 .markdown-body h6 {
-  margin-top: var(--base-size-24);
-  margin-bottom: var(--base-size-16);
-  font-weight: var(--base-text-weight-semibold, 600);
+  margin-top: $size-24;
+  margin-bottom: $size-16;
+  font-weight: $text-weight-semibold;
   line-height: 1.25;
 }
 
 .markdown-body h2 {
-  font-weight: var(--base-text-weight-semibold, 600);
+  font-weight: $text-weight-semibold;
   padding-bottom: 0.3em;
   font-size: 1.5em;
   border-bottom: 1px solid var(--color-border-muted);
 }
 
 .markdown-body h3 {
-  font-weight: var(--base-text-weight-semibold, 600);
+  font-weight: $text-weight-semibold;
   font-size: 1.25em;
 }
 
 .markdown-body h4 {
-  font-weight: var(--base-text-weight-semibold, 600);
+  font-weight: $text-weight-semibold;
   font-size: 1em;
 }
 
 .markdown-body h5 {
-  font-weight: var(--base-text-weight-semibold, 600);
+  font-weight: $text-weight-semibold;
   font-size: 0.875em;
 }
 
 .markdown-body h6 {
-  font-weight: var(--base-text-weight-semibold, 600);
+  font-weight: $text-weight-semibold;
   font-size: 0.85em;
   color: var(--color-fg-muted);
 }
@@ -366,32 +343,14 @@
 .markdown-body tt,
 .markdown-body code,
 .markdown-body samp {
-  font-family: var(
-    --fontStack-monospace,
-    ui-monospace,
-    SFMono-Regular,
-    SF Mono,
-    Menlo,
-    Consolas,
-    Liberation Mono,
-    monospace
-  );
+  font-family: $font;
   font-size: 12px;
 }
 
 .markdown-body pre {
   margin-top: 0;
   margin-bottom: 0;
-  font-family: var(
-    --fontStack-monospace,
-    ui-monospace,
-    SFMono-Regular,
-    SF Mono,
-    Menlo,
-    Consolas,
-    Liberation Mono,
-    monospace
-  );
+  font-family: $font;
   font-size: 12px;
   word-wrap: normal;
 }
@@ -411,7 +370,7 @@
 }
 
 .markdown-body .mr-2 {
-  margin-right: var(--base-size-8, 8px) !important;
+  margin-right: $size-8 !important;
 }
 
 .markdown-body::before {
@@ -444,7 +403,7 @@
 
 .markdown-body .anchor {
   float: left;
-  padding-right: var(--base-size-4);
+  padding-right: $size-4;
   margin-left: -20px;
   line-height: 1;
 }
@@ -462,7 +421,7 @@
 .markdown-body pre,
 .markdown-body details {
   margin-top: 0;
-  margin-bottom: var(--base-size-16);
+  margin-bottom: $size-16;
 }
 
 .markdown-body blockquote > :first-child {
@@ -581,7 +540,7 @@
 }
 
 .markdown-body li > p {
-  margin-top: var(--base-size-16);
+  margin-top: $size-16;
 }
 
 .markdown-body li + li {
@@ -594,19 +553,19 @@
 
 .markdown-body dl dt {
   padding: 0;
-  margin-top: var(--base-size-16);
+  margin-top: $size-16;
   font-size: 1em;
   font-style: italic;
-  font-weight: var(--base-text-weight-semibold, 600);
+  font-weight: $text-weight-semibold;
 }
 
 .markdown-body dl dd {
-  padding: 0 var(--base-size-16);
-  margin-bottom: var(--base-size-16);
+  padding: 0 $size-16;
+  margin-bottom: $size-16;
 }
 
 .markdown-body table th {
-  font-weight: var(--base-text-weight-semibold, 600);
+  font-weight: $text-weight-semibold;
 }
 
 .markdown-body table th,
@@ -771,7 +730,7 @@
 }
 
 .markdown-body .highlight {
-  margin-bottom: var(--base-size-16);
+  margin-bottom: $size-16;
 }
 
 .markdown-body .highlight pre {
@@ -781,7 +740,7 @@
 
 .markdown-body .highlight pre,
 .markdown-body pre {
-  padding: var(--base-size-16);
+  padding: $size-16;
   overflow: auto;
   font-size: 85%;
   line-height: 1.45;
@@ -814,7 +773,7 @@
 }
 
 .markdown-body .csv-data .blob-num {
-  padding: 10px var(--base-size-8) 9px;
+  padding: 10px $size-8 9px;
   text-align: right;
   background: var(--color-bg-default);
   border: 0;
@@ -825,7 +784,7 @@
 }
 
 .markdown-body .csv-data th {
-  font-weight: var(--base-text-weight-semibold, 600);
+  font-weight: $text-weight-semibold;
   background: var(--color-bg-muted);
   border-top: 0;
 }
@@ -845,13 +804,13 @@
 }
 
 .markdown-body .footnotes ol {
-  padding-left: var(--base-size-16);
+  padding-left: $size-16;
 }
 
 .markdown-body .footnotes ol ul {
   display: inline-block;
-  padding-left: var(--base-size-16);
-  margin-top: var(--base-size-16);
+  padding-left: $size-16;
+  margin-top: $size-16;
 }
 
 .markdown-body .footnotes li {
@@ -860,10 +819,10 @@
 
 .markdown-body .footnotes li:target::before {
   position: absolute;
-  top: calc(var(--base-size-8) * -1);
-  right: calc(var(--base-size-8) * -1);
-  bottom: calc(var(--base-size-8) * -1);
-  left: calc(var(--base-size-24) * -1);
+  top: calc(size(#{$size-8}) * -1);
+  right: calc(size(#{$size-8}) * -1);
+  bottom: calc(size(#{$size-8}) * -1);
+  left: calc(size(#{$size-24}) * -1);
   pointer-events: none;
   content: '';
   border: 2px solid var(--color-border-accent-emphasis);
@@ -1018,7 +977,7 @@
   font-family: 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
   font-size: 1em;
   font-style: normal !important;
-  font-weight: var(--base-text-weight-normal, 400);
+  font-weight: $text-weight-normal;
   line-height: 1;
   vertical-align: -0.075em;
 }
@@ -1033,7 +992,7 @@
 }
 
 .markdown-body .task-list-item label {
-  font-weight: var(--base-text-weight-normal, 400);
+  font-weight: $text-weight-normal;
 }
 
 .markdown-body .task-list-item.enabled label {
@@ -1041,7 +1000,7 @@
 }
 
 .markdown-body .task-list-item + .task-list-item {
-  margin-top: var(--base-size-4);
+  margin-top: $size-4;
 }
 
 .markdown-body .task-list-item .handle {
@@ -1075,8 +1034,8 @@
 }
 
 .markdown-body .markdown-alert {
-  padding: var(--base-size-8) var(--base-size-16);
-  margin-bottom: var(--base-size-16);
+  padding: $size-8 $size-16;
+  margin-bottom: $size-16;
   color: inherit;
   border-left: 0.25em solid var(--color-border-default);
 }
@@ -1091,7 +1050,7 @@
 
 .markdown-body .markdown-alert .markdown-alert-title {
   display: flex;
-  font-weight: var(--base-text-weight-medium, 500);
+  font-weight: $text-weight-medium;
   align-items: center;
   line-height: 1;
 }
