--- a/src/components/layouts/Body/Body.module.scss
+++ b/src/components/layouts/Body/Body.module.scss
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-rows: 80px 1fr;
   grid-template-columns: 250px 1fr;
+  background-color: var(--color-bg-default);
 
   > header {
     grid-area: 1 / 2 / 2 / 3;
