--- a/src/components/layouts/Body/Body.module.scss
+++ b/src/components/layouts/Body/Body.module.scss
@@ -2,6 +2,8 @@
   display: grid;
   grid-template-rows: 80px 1fr;
   grid-template-columns: 250px 1fr;
+  font-family: $font-stack-system;
+  color: var(--color-fg-default);
   background-color: var(--color-bg-default);
 
   > header {
