--- a/src/styles/base/_markdown.scss
+++ b/src/styles/base/_markdown.scss
@@ -4,9 +4,7 @@
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   margin: 0;
-  color: var(--color-fg-default);
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Noto Sans', Helvetica,
-    Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji';
+  font-family: $font-stack-system;
   font-size: 16px;
   line-height: 1.5;
   word-wrap: break-word;
@@ -251,7 +249,7 @@
 .markdown-body kbd {
   display: inline-block;
   padding: $size-4;
-  font: 11px $font;
+  font: 11px $font-stack-monospace;
   line-height: 10px;
   color: var(--color-fg-default);
   vertical-align: middle;
@@ -340,14 +338,14 @@
 .markdown-body tt,
 .markdown-body code,
 .markdown-body samp {
-  font-family: $font;
+  font-family: $font-stack-monospace;
   font-size: 12px;
 }
 
 .markdown-body pre {
   margin-top: 0;
   margin-bottom: 0;
-  font-family: $font;
+  font-family: $font-stack-monospace;
   font-size: 12px;
   word-wrap: normal;
 }
