design: create new `--color-bg-inset` color and change bg color accordingly

--- a/src/styles/base/_theme.scss
+++ b/src/styles/base/_theme.scss
@@ -16,6 +16,7 @@
     --color-fg-attention: #d29922;
     --color-fg-danger: #f85149;
     --color-fg-done: #ab7df8;
+    --color-bg-inset: #010409; // custom color
     --color-bg-default: #0d1117;
     --color-bg-muted: #151b23;
     --color-bg-neutral-muted: #656c7633;
@@ -75,6 +76,7 @@
     --color-fg-attention: #9a6700;
     --color-fg-danger: #d1242f;
     --color-fg-done: #8250df;
+    --color-bg-inset: #fff; // custom color
     --color-bg-default: #fff;
     --color-bg-muted: #f6f8fa;
     --color-bg-neutral-muted: #818b981f;
