--- a/src/components/layouts/Body/Body.module.scss
+++ b/src/components/layouts/Body/Body.module.scss
@@ -4,7 +4,7 @@
   grid-template-columns: 250px 1fr;
   font-family: $font-stack-system;
   color: var(--color-fg-default);
-  background-color: var(--color-bg-default);
+  background-color: var(--color-bg-inset);
 
   > header {
     grid-area: 1 / 2 / 2 / 3;
