design: finish sidebar categories design

--- a/src/components/layouts/Aside/Aside.module.scss
+++ b/src/components/layouts/Aside/Aside.module.scss
@@ -1,7 +1,14 @@
 .aside {
+  @include selector-scrollbar;
+
   position: sticky;
   top: 0;
   height: 100vh;
-  overflow-y: scroll;
-  background-color: inherit;
+  background-color: var(--color-bg-default);
+  border-right: 1px solid var(--color-border-default);
+
+  > ul:not(:last-child) {
+    margin: 16px 0;
+    border-bottom: 1px solid var(--color-border-default);
+  }
 }
