--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -8,6 +8,7 @@ $size-16: 1rem;
 $size-24: 1.5rem;
 $size-40: 2.5rem;
 $size-border-radius: 6px;
+$size-header-height: 64px;
 
 /* text-weight */
 $text-weight-normal: 400;
