--- a/src/components/layouts/Aside/Aside.module.scss
+++ b/src/components/layouts/Aside/Aside.module.scss
@@ -2,8 +2,8 @@
   @include selector-scrollbar;
 
   position: sticky;
-  top: 0;
-  height: 100vh;
+  top: $size-header-height;
+  height: calc(100vh - $size-header-height);
   background-color: var(--color-bg-default);
   border-right: 1px solid var(--color-border-default);
 
