design: move `img`'s `border-radius` property to `_markdown.scss`

--- a/src/styles/base/_markdown.scss
+++ b/src/styles/base/_markdown.scss
@@ -104,6 +104,7 @@
   border-style: none;
   max-width: 100%;
   box-sizing: content-box;
+  border-radius: $size-border-radius;
 }
 
 .markdown-body code,
