design: update `component/header/Title` component

--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -9,6 +9,7 @@ $size-24: 1.5rem;
 $size-40: 2.5rem;
 $size-border-radius: 6px;
 $size-header-height: 64px;
+$size-sidebar-width: 250px;
 
 /* text-weight */
 $text-weight-normal: 400;
