--- a/src/components/layouts/Body/Body.module.scss
+++ b/src/components/layouts/Body/Body.module.scss
@@ -3,7 +3,7 @@
 
   display: grid;
   grid-template-rows: $size-header-height 1fr;
-  grid-template-columns: 250px 1fr;
+  grid-template-columns: $size-sidebar-width 1fr;
   font-family: $font-stack-system;
   color: var(--color-fg-default);
   background-color: var(--color-bg-inset);
