--- a/src/components/layouts/Header/Header.module.scss
+++ b/src/components/layouts/Header/Header.module.scss
@@ -4,6 +4,8 @@
   position: sticky;
   top: 0;
   z-index: 1;
+  display: grid;
+  grid-template-columns: $size-sidebar-width 1fr;
   font-size: 32px;
   background-color: inherit;
   border-bottom: 1px solid var(--color-border-default);
