--- a/src/components/aside/Categories/Categories.module.scss
+++ b/src/components/aside/Categories/Categories.module.scss
@@ -18,6 +18,12 @@
     padding: $size-8 $size-4;
     margin: $size-4 $size-8;
 
+    &:hover {
+      > div.react-icons {
+        @include props-animation-shake;
+      }
+    }
+
     > div.react-icons {
       @include props-flex-center;
 
