--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -5,6 +5,36 @@
   justify-content: center;
 }
 
+@mixin props-animation-shake {
+  animation: shake 0.6s ease-in-out;
+
+  @keyframes shake {
+    0% {
+      transform: rotate(0deg) translateX(0);
+    }
+
+    25% {
+      transform: rotate(-6deg) translateX(-0.5px);
+    }
+
+    50% {
+      transform: rotate(6deg) translateX(0.5px);
+    }
+
+    65% {
+      transform: rotate(-3deg) translateX(-0.25px);
+    }
+
+    80% {
+      transform: rotate(3deg) translateX(0.25px);
+    }
+
+    100% {
+      transform: rotate(0deg) translateX(0);
+    }
+  }
+}
+
 /* selector */
 @mixin selector-hover-default {
   transition: all 0.3s ease-in-out;
