design: add `props-animation-shake` to `Links.module.scss`

--- a/src/components/aside/Links/Links.module.scss
+++ b/src/components/aside/Links/Links.module.scss
@@ -8,6 +8,12 @@
     @include props-flex-center;
     @include selector-hover-default;
 
+    &:hover {
+      > svg {
+        @include props-animation-shake;
+      }
+    }
+
     flex-direction: column;
     padding: 6px;
 
