fix: icon theme in the `DarkModeToggle` component is out of sync on page refresh.

--- a/src/components/header/DarkModeToggle/DarkModeToggle.module.scss
+++ b/src/components/header/DarkModeToggle/DarkModeToggle.module.scss
@@ -6,6 +6,8 @@
   }
 
   .mode-switcher {
+    @include props-animation-fade-in;
+
     /* variables */
     $light-color: var(--color-fg-default);
     $dark-color: var(--color-bg-inset);
