--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -35,6 +35,20 @@
   }
 }
 
+@mixin props-animation-fade-in {
+  animation: 0.6s ease-in-out fade-in;
+
+  @keyframes fade-in {
+    0% {
+      opacity: 0;
+    }
+
+    100% {
+      opacity: 1;
+    }
+  }
+}
+
 /* selector */
 @mixin selector-hover-default {
   transition: all 0.3s ease-in-out;
