--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -10,6 +10,7 @@ $size-40: 2.5rem;
 $size-border-radius: 6px;
 $size-header-height: 64px;
 $size-sidebar-width: 256px;
+$size-nav-width: $size-sidebar-width;
 
 /* text-weight */
 $text-weight-normal: 400;
