design: change `font-weight` of `.name-en` in `Categories`

--- a/src/components/aside/Categories/Categories.module.scss
+++ b/src/components/aside/Categories/Categories.module.scss
@@ -37,6 +37,7 @@
 
     > div.name-en {
       grid-area: 1 / 2 / 2 / 3;
+      font-weight: $text-weight-medium;
       letter-spacing: -1px;
     }
 
