--- a/src/components/layouts/Nav/Nav.module.scss
+++ b/src/components/layouts/Nav/Nav.module.scss
@@ -3,5 +3,12 @@
   top: $size-header-height;
   box-sizing: border-box;
   height: calc(100vh - $size-header-height);
-  padding: 45px 0;
+  padding: 24px 16px 0 0;
+
+  > div {
+    padding: 4px 8px;
+    background-color: var(--color-bg-default);
+    border: 1px solid var(--color-border-default);
+    border-radius: $size-border-radius;
+  }
 }
