design: create `--color-main` in `_theme.scss`

--- a/src/styles/base/_theme.scss
+++ b/src/styles/base/_theme.scss
@@ -12,6 +12,7 @@
   /* dark */
   color-scheme: dark;
 
+  --color-main: #d6bbf2;
   --color-focus-outline: #1f6feb;
   --color-fg-default: #f0f6fc;
   --color-fg-muted: #9198a1;
@@ -69,6 +70,7 @@
   /* light */
   color-scheme: light;
 
+  --color-main: #d6bbf2;
   --color-focus-outline: #0969da;
   --color-fg-default: #1f2328;
   --color-fg-muted: #59636e;
